--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "aninest-anime-calendar",
+  "name": "aninest1",
   "private": true,
+  "homepage": "https://gihanwlf.github.io/Aninest1/",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
